Timesheet/main/default/objects/Dashboard_Profile_Config__mdt/Dashboard_Profile_Config__mdt.object-meta.xml
<CustomObject>
    <label>Dashboard Profile Config</label>
    <pluralLabel>Dashboard Profile Configs</pluralLabel>
</CustomObject>