Timesheet/main/default/objects/Dashboard_Profile_Config__mdt/fields/Column_3_Fields__c.field-meta.xml
<CustomField>
    <fullName>Column_3_Fields__c</fullName>
    <label>Column 3 Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>