Timesheet/main/default/objects/Dashboard_Profile_Config__mdt/fields/Show_Null_Fields__c.field-meta.xml
<CustomField>
    <fullName>Show_Null_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Null Fields</label>
    <type>Checkbox</type>
</CustomField>